--- a/ets2-tool/src/styles.css
+++ b/ets2-tool/src/styles.css
@@ -12,9 +12,11 @@
   --card-bg: rgba(255,255,255,0.045);
   --card-border: rgba(255,255,255,0.08);
 
-  --card-bg-linear: linear-gradient(135deg, rgba(0,255,255,0.2), rgba(0,255,255,0.05));
+  --card-bg-linear: linear-gradient(135deg, rgba(0,255,255,0.4), rgba(0,255,255,0.1));
   --card-box-shadow: 0 25px 65px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.08);
 
+  --multi-select: #080c0c;
+  --modal-box-bg: rgba(255,255,255,0.045);
 
 }
 
@@ -32,8 +34,11 @@ body.theme-dark {
   --card-bg: rgba(255,255,255,0.06);
   --card-border: rgba(255,255,255,0.08);
 
-  --card-bg-linear: linear-gradient(135deg, rgba(0,255,255,0.2), rgba(0,255,255,0.05));
+  --card-bg-linear: linear-gradient(135deg, rgba(0,255,255,0.4), rgba(0,255,255,0.12));
   --card-box-shadow: 0 25px 65px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.08);
+
+  --multi-select: #080c0c;
+  --modal-box-bg: rgba(22, 28, 36, 0.95);
 }
 
 body.theme-light {
@@ -52,13 +57,16 @@ body.theme-light {
 
   --card-bg-linear: linear-gradient(
     135deg,
-    rgba(0,102,255,0.18),
-    rgba(0,102,255,0.04)
+    rgba(0,102,255,0.32),
+    rgba(0,102,255,0.145)
   );
 
   --card-box-shadow:
     0 18px 45px rgba(15,23,42,0.15),
     inset 0 1px 0 rgba(255,255,255,0.6);
+
+  --multi-select: white;
+  --modal-box-bg: rgba(255, 255, 255, 0.98); 
 }
 
 body.theme-neon {
@@ -72,18 +80,21 @@ body.theme-neon {
   --panel-bg: rgba(0,18,18,0.9);
   --panel-border: rgba(0,255,156,0.32);
 
-  --card-bg: rgba(0,255,156,0.045);
+  --card-bg: rgba(52, 102, 83, 0.25);
   --card-border: rgba(0,255,156,0.30);
 
   --card-bg-linear: linear-gradient(
     135deg,
-    rgba(0,255,156,0.18),
-    rgba(0,255,156,0.04)
+    rgba(0,255,156,0.42),
+    rgba(0,255,156,0.56)
   );
 
   --card-box-shadow:
-    0 25px 65px rgba(0,0,0,0.55),
+    0 25px 65px rgba(0,255,150,0.15),
     inset 0 1px 0 rgba(0,255,156,0.06);
+
+  --multi-select: #080c0c;
+  --modal-box-bg: rgba(5, 15, 12, 0.95); 
 }
 
 
@@ -475,7 +486,7 @@ body {
 /* --- MODALS & MULTI MODAL --- */
 
 .modal-box {
-  background: var(--card-bg);
+  background: var(--modal-box-bg);
   padding: 25px;
   border-radius: 12px;
   width: 350px;
@@ -513,8 +524,8 @@ body {
   padding: 10px;
   margin-bottom: 10px;
   box-sizing: border-box;
-  background: var(--card-bg);
-  border: 1px solid var(--card-border);
+  background: var(--multi-select);
+  border: 2px solid var(--card-bg-linear);
   color: var(--text-main);
   border-radius: 5px;
 }
@@ -579,8 +590,8 @@ body {
 
 .tool-card:hover {
   transform: translateY(-10px);
-  border-color: rgba(0,255,255,0.6);
-  box-shadow: 0 8px 30px rgba(0,255,255,0.25);
+  border-color: var(--card-border);
+  box-shadow: 0 8px 30px var(--card-box-shadow);
 }
 
 .tool-card img {
@@ -641,7 +652,7 @@ input[type="checkbox"].toggle-checkbox {
 }
 
 .checkboxSlider {
-  background-color: #ccc;
+  background-color: var(--text-muted);
   position: relative;
   display: block;
   margin: 10px 0 20px 0;
@@ -705,7 +716,7 @@ input[type="checkbox"]:checked + .checkboxSlider::before {
   appearance: none;
   width: 20px;
   height: 20px;
-  background: var();
+  background: var(--accent);
   border-radius: 50%;
   cursor: pointer;
   margin-top: -6px;
